@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.painless.symbol;
@@ -22,7 +23,6 @@ import org.elasticsearch.painless.lookup.PainlessLookupUtility;
 import org.elasticsearch.painless.lookup.PainlessMethod;
 import org.elasticsearch.painless.symbol.FunctionTable.LocalFunction;
 
-import java.util.Collections;
 import java.util.List;
 
 public class IRDecorations {
@@ -286,7 +286,7 @@ public class IRDecorations {
 
         @Override
         public String toString() {
-            return PainlessLookupUtility.buildPainlessMethodKey(getValue().javaMethod.getName(), getValue().typeParameters.size());
+            return PainlessLookupUtility.buildPainlessMethodKey(getValue().javaMethod().getName(), getValue().typeParameters().size());
         }
     }
 
@@ -302,7 +302,7 @@ public class IRDecorations {
     public static class IRDTypeParameters extends IRDecoration<List<Class<?>>> {
 
         public IRDTypeParameters(List<Class<?>> value) {
-            super(Collections.unmodifiableList(value));
+            super(List.copyOf(value));
         }
     }
 
@@ -310,7 +310,7 @@ public class IRDecorations {
     public static class IRDParameterNames extends IRDecoration<List<String>> {
 
         public IRDParameterNames(List<String> value) {
-            super(Collections.unmodifiableList(value));
+            super(List.copyOf(value));
         }
     }
 
@@ -354,6 +354,18 @@ public class IRDecorations {
         }
     }
 
+    /**
+     * Marker that opts a function into the cancellation-aware loop guard (vs. the legacy
+     * {@link IRDMaxLoopCounter}). Attached when the script base class overrides
+     * {@code _getCancellationCheck()}.
+     */
+    public static class IRCCancellationCheck implements IRCondition {
+
+        private IRCCancellationCheck() {
+
+        }
+    }
+
     /** describes the type for an instanceof instruction */
     public static class IRDInstanceType extends IRDType {
 
@@ -379,7 +391,7 @@ public class IRDecorations {
 
         @Override
         public String toString() {
-            return PainlessLookupUtility.buildPainlessMethodKey(getValue().javaMethod.getName(), getValue().typeParameters.size());
+            return PainlessLookupUtility.buildPainlessMethodKey(getValue().javaMethod().getName(), getValue().typeParameters().size());
         }
     }
 
@@ -451,7 +463,7 @@ public class IRDecorations {
     public static class IRDCaptureNames extends IRDecoration<List<String>> {
 
         public IRDCaptureNames(List<String> value) {
-            super(Collections.unmodifiableList(value));
+            super(List.copyOf(value));
         }
     }
 
