@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.reindex.remote;
@@ -18,18 +19,23 @@ import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.xcontent.LoggingDeprecationHandler;
 import org.elasticsearch.common.xcontent.XContentHelper;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.index.query.QueryBuilder;
+import org.elasticsearch.search.fetch.subphase.FetchSourceContext;
 import org.elasticsearch.search.sort.FieldSortBuilder;
 import org.elasticsearch.search.sort.SortBuilder;
 import org.elasticsearch.xcontent.NamedXContentRegistry;
+import org.elasticsearch.xcontent.ToXContent;
 import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xcontent.json.JsonXContent;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Collectors;
 
 import static org.elasticsearch.core.TimeValue.timeValueMillis;
@@ -44,6 +50,21 @@ import static org.elasticsearch.core.TimeValue.timeValueMillis;
 final class RemoteRequestBuilders {
     private RemoteRequestBuilders() {}
 
+    /**
+     * Cross-project {@code project_routing} on {@code POST /_search} and open PIT was added in 9.3.
+     */
+    private static final Version REMOTE_PROJECT_ROUTING_SUPPORTED = Version.V_9_3_0;
+
+    /**
+     * {@code allow_partial_search_results} on {@code POST /{index}/_pit} was added in 8.16
+     */
+    private static final Version REMOTE_ALLOW_PARTIAL_SEARCH_RESULTS_SUPPORTED = Version.V_8_16_0;
+
+    /**
+     * {@code index_filter} on {@code POST /{index}/_pit} was added in 8.12
+     */
+    private static final Version REMOTE_OPEN_PIT_INDEX_FILTER_SUPPORTED = Version.V_8_12_0;
+
     static Request initialSearch(SearchRequest searchRequest, BytesReference query, Version remoteVersion) {
         // It is nasty to build paths with StringBuilder but we'll be careful....
         StringBuilder path = new StringBuilder("/");
@@ -52,7 +73,7 @@ final class RemoteRequestBuilders {
         Request request = new Request("POST", path.toString());
 
         if (searchRequest.scroll() != null) {
-            TimeValue keepAlive = searchRequest.scroll().keepAlive();
+            TimeValue keepAlive = searchRequest.scroll();
             // V_5_0_0
             if (remoteVersion.before(Version.fromId(5000099))) {
                 /* Versions of Elasticsearch before 5.0 couldn't parse nanos or micros
@@ -139,19 +160,191 @@ final class RemoteRequestBuilders {
                 }
             }
 
-            if (searchRequest.source().fetchSource() != null) {
-                entity.field("_source", searchRequest.source().fetchSource());
-            } else {
+            var fetchSource = searchRequest.source().fetchSource();
+            if (fetchSource == null) {
                 if (remoteVersion.onOrAfter(Version.fromId(1000099))) {
                     // Versions before 1.0 don't support `"_source": true` so we have to ask for the source as a stored field.
                     entity.field("_source", true);
                 }
+            } else {
+                if (remoteVersion.onOrAfter(Version.V_9_1_0) || fetchSource.excludeVectors() == null) {
+                    entity.field("_source", fetchSource);
+                } else {
+                    // Versions before 9.1.0 don't support "exclude_vectors" so we need to manually convert.
+                    if (fetchSource.includes().length == 0 && fetchSource.excludes().length == 0) {
+                        if (remoteVersion.onOrAfter(Version.fromId(1000099))) {
+                            // Versions before 1.0 don't support `"_source": true` so we have to ask for the source as a stored field.
+                            entity.field("_source", true);
+                        }
+                    } else {
+                        entity.startObject("_source");
+                        if (fetchSource.includes().length > 0) {
+                            entity.field(FetchSourceContext.INCLUDES_FIELD.getPreferredName(), fetchSource.includes());
+                        }
+                        if (fetchSource.excludes().length > 0) {
+                            entity.field(FetchSourceContext.EXCLUDES_FIELD.getPreferredName(), fetchSource.excludes());
+                        }
+                        entity.endObject();
+                    }
+                }
+            }
+
+            if (searchRequest.getProjectRouting() != null && remoteVersion.onOrAfter(REMOTE_PROJECT_ROUTING_SUPPORTED)) {
+                entity.field("project_routing", searchRequest.getProjectRouting());
             }
 
             entity.endObject();
             request.setJsonEntity(Strings.toString(entity));
         } catch (IOException e) {
             throw new ElasticsearchException("unexpected error building entity", e);
+        }
+        return request;
+    }
+
+    /**
+     * Builds a {@code POST /{index}/_pit} request. Optional JSON body may include {@code project_routing} (9.3+) and/or
+     * {@code index_filter} (8.12+) when the remote version supports them.
+     */
+    static Request openPit(String[] indices, TimeValue keepAlive, SearchRequest searchRequest, Version remoteVersion) {
+        StringBuilder path = new StringBuilder("/");
+        addIndices(path, indices);
+        path.append("_pit");
+        Request request = new Request("POST", path.toString());
+        request.addParameter("keep_alive", keepAlive.getStringRep());
+        if (remoteVersion.onOrAfter(REMOTE_ALLOW_PARTIAL_SEARCH_RESULTS_SUPPORTED)) {
+            request.addParameter("allow_partial_search_results", "false");
+        }
+
+        String projectRouting = null;
+        if (searchRequest.getProjectRouting() != null && remoteVersion.onOrAfter(REMOTE_PROJECT_ROUTING_SUPPORTED)) {
+            projectRouting = searchRequest.getProjectRouting();
+        }
+        QueryBuilder indexFilter = null;
+        if (searchRequest.source() != null
+            && searchRequest.source().query() != null
+            && remoteVersion.onOrAfter(REMOTE_OPEN_PIT_INDEX_FILTER_SUPPORTED)) {
+            indexFilter = searchRequest.source().query();
+        }
+        if (projectRouting != null || indexFilter != null) {
+            try (XContentBuilder entity = JsonXContent.contentBuilder()) {
+                entity.startObject();
+                if (projectRouting != null) {
+                    entity.field("project_routing", projectRouting);
+                }
+                if (indexFilter != null) {
+                    entity.field("index_filter");
+                    indexFilter.toXContent(entity, ToXContent.EMPTY_PARAMS);
+                }
+                entity.endObject();
+                request.setJsonEntity(Strings.toString(entity));
+            } catch (IOException e) {
+                throw new ElasticsearchException("unexpected error building open pit entity", e);
+            }
+        }
+        return request;
+    }
+
+    static Request closePit(BytesReference pitId) {
+        Request request = new Request("DELETE", "/_pit");
+        try (XContentBuilder entity = JsonXContent.contentBuilder()) {
+            entity.startObject().field("id", java.util.Base64.getUrlEncoder().encodeToString(BytesReference.toBytes(pitId))).endObject();
+            request.setJsonEntity(Strings.toString(entity));
+        } catch (IOException e) {
+            throw new ElasticsearchException("failed to build close pit entity", e);
+        }
+        return request;
+    }
+
+    /**
+     * Builds a PIT search request. Requires remote version 7.10.0 or later.
+     * Uses POST /_search with pit and optional search_after in the body.
+     */
+    static Request pitSearch(
+        SearchRequest searchRequest,
+        BytesReference query,
+        BytesReference pitId,
+        TimeValue keepAlive,
+        @Nullable Object[] searchAfter,
+        Version remoteVersion
+    ) {
+        if (remoteVersion.before(Version.V_7_10_0)) {
+            throw new IllegalArgumentException("PIT search requires remote version 7.10.0 or later, but got " + remoteVersion);
+        }
+        Request request = new Request("POST", "/_search");
+
+        if (remoteVersion.onOrAfter(Version.fromId(6030099))) {
+            request.addParameter("allow_partial_search_results", "false");
+        }
+
+        try (
+            XContentBuilder entity = JsonXContent.contentBuilder();
+            XContentParser queryParser = XContentHelper.createParser(NamedXContentRegistry.EMPTY, LoggingDeprecationHandler.INSTANCE, query)
+        ) {
+            entity.startObject();
+
+            entity.startObject("pit");
+            entity.field("id", java.util.Base64.getUrlEncoder().encodeToString(BytesReference.toBytes(pitId)));
+            entity.field("keep_alive", keepAlive.getStringRep());
+            entity.endObject();
+
+            entity.field("size", searchRequest.source().size());
+
+            if (searchRequest.source().version() == null || searchRequest.source().version() == false) {
+                entity.field("version", false);
+            } else {
+                entity.field("version", true);
+            }
+
+            List<SortBuilder<?>> sorts = searchRequest.source().sorts();
+            if (sorts != null && sorts.isEmpty() == false) {
+                entity.startArray("sort");
+                for (SortBuilder<?> sort : sorts) {
+                    sort.toXContent(entity, ToXContent.EMPTY_PARAMS);
+                }
+                entity.endArray();
+            }
+
+            entity.field("query");
+            entity.copyCurrentStructure(queryParser);
+            if (queryParser.nextToken() != null) {
+                throw new ElasticsearchException("query was more than a single object");
+            }
+
+            var fetchSource = searchRequest.source().fetchSource();
+            if (fetchSource == null) {
+                entity.field("_source", true);
+            } else {
+                if (remoteVersion.onOrAfter(Version.V_9_1_0) || fetchSource.excludeVectors() == null) {
+                    entity.field("_source", fetchSource);
+                } else {
+                    if (fetchSource.includes().length == 0 && fetchSource.excludes().length == 0) {
+                        entity.field("_source", true);
+                    } else {
+                        entity.startObject("_source");
+                        if (fetchSource.includes().length > 0) {
+                            entity.field(FetchSourceContext.INCLUDES_FIELD.getPreferredName(), fetchSource.includes());
+                        }
+                        if (fetchSource.excludes().length > 0) {
+                            entity.field(FetchSourceContext.EXCLUDES_FIELD.getPreferredName(), fetchSource.excludes());
+                        }
+                        entity.endObject();
+                    }
+                }
+            }
+
+            if (searchAfter != null && searchAfter.length > 0) {
+                entity.array("search_after", searchAfter);
+            }
+
+            Integer trackTotalHitsUpTo = searchRequest.source().trackTotalHitsUpTo();
+            if (trackTotalHitsUpTo != null) {
+                entity.field("track_total_hits", trackTotalHitsUpTo.intValue());
+            }
+
+            entity.endObject();
+            request.setJsonEntity(Strings.toString(entity));
+        } catch (IOException e) {
+            throw new ElasticsearchException("unexpected error building pit search entity", e);
         }
         return request;
     }
@@ -165,11 +358,7 @@ final class RemoteRequestBuilders {
     }
 
     private static String encodeIndex(String s) {
-        try {
-            return URLEncoder.encode(s, "utf-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException(e);
-        }
+        return URLEncoder.encode(s, StandardCharsets.UTF_8);
     }
 
     private static String sortToUri(SortBuilder<?> sort) {
