@@ -1,41 +1,50 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 package org.elasticsearch.cluster.coordination;
 
+import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.action.ActionListener;
-import org.elasticsearch.action.admin.cluster.node.hotthreads.NodesHotThreadsAction;
 import org.elasticsearch.action.admin.cluster.node.hotthreads.NodesHotThreadsRequest;
 import org.elasticsearch.action.admin.cluster.node.hotthreads.NodesHotThreadsResponse;
+import org.elasticsearch.action.admin.cluster.node.hotthreads.TransportNodesHotThreadsAction;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.node.DiscoveryNode;
+import org.elasticsearch.common.ReferenceDocs;
+import org.elasticsearch.common.Strings;
+import org.elasticsearch.common.logging.ChunkedLoggingStream;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.util.concurrent.ThreadContext;
+import org.elasticsearch.common.util.concurrent.AbstractRunnable;
+import org.elasticsearch.common.util.concurrent.PrioritizedThrottledTaskRunner;
 import org.elasticsearch.core.Releasable;
 import org.elasticsearch.core.Releasables;
 import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.monitor.jvm.HotThreads;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.threadpool.ThreadPool.Names;
 import org.elasticsearch.transport.TransportService;
 
+import java.io.OutputStreamWriter;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.Executor;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.common.util.concurrent.ConcurrentCollections.newConcurrentMap;
+import static org.elasticsearch.core.Strings.format;
 
 /**
  * A publication can succeed and complete before all nodes have applied the published state and acknowledged it; however we need every node
@@ -50,7 +59,6 @@ public class LagDetector {
     public static final Setting<TimeValue> CLUSTER_FOLLOWER_LAG_TIMEOUT_SETTING = Setting.timeSetting(
         "cluster.follower_lag.timeout",
         TimeValue.timeValueMillis(90000),
-        TimeValue.timeValueMillis(1),
         Setting.Property.NodeScope
     );
 
@@ -58,6 +66,7 @@ public class LagDetector {
     private final LagListener lagListener;
     private final Supplier<DiscoveryNode> localNodeSupplier;
     private final ThreadPool threadPool;
+    private final Executor clusterCoordinationExecutor;
     private final Map<DiscoveryNode, NodeAppliedStateTracker> appliedStateTrackersByNode = newConcurrentMap();
 
     public LagDetector(
@@ -67,6 +76,7 @@ public class LagDetector {
         final Supplier<DiscoveryNode> localNodeSupplier
     ) {
         this.threadPool = threadPool;
+        this.clusterCoordinationExecutor = threadPool.executor(Names.CLUSTER_COORDINATION);
         this.clusterStateApplicationTimeout = CLUSTER_FOLLOWER_LAG_TIMEOUT_SETTING.get(settings);
         this.lagListener = lagListener;
         this.localNodeSupplier = localNodeSupplier;
@@ -98,24 +108,27 @@ public class LagDetector {
         final List<NodeAppliedStateTracker> laggingTrackers = appliedStateTrackersByNode.values()
             .stream()
             .filter(t -> t.appliedVersionLessThan(version))
-            .collect(Collectors.toList());
+            .toList();
 
         if (laggingTrackers.isEmpty()) {
             logger.trace("lag detection for version {} is unnecessary: {}", version, appliedStateTrackersByNode.values());
         } else {
-            logger.debug("starting lag detector for version {}: {}", version, laggingTrackers);
+            if (clusterStateApplicationTimeout.millis() <= 0) {
+                logger.debug("lag detector for version {} skipped: {}", version, laggingTrackers);
+            } else {
+                logger.debug("starting lag detector for version {}: {}", version, laggingTrackers);
+                threadPool.scheduleUnlessShuttingDown(clusterStateApplicationTimeout, clusterCoordinationExecutor, new Runnable() {
+                    @Override
+                    public void run() {
+                        laggingTrackers.forEach(t -> t.checkForLag(version));
+                    }
 
-            threadPool.scheduleUnlessShuttingDown(clusterStateApplicationTimeout, Names.GENERIC, new Runnable() {
-                @Override
-                public void run() {
-                    laggingTrackers.forEach(t -> t.checkForLag(version));
-                }
-
-                @Override
-                public String toString() {
-                    return "lag detector for version " + version + " on " + laggingTrackers;
-                }
-            });
+                    @Override
+                    public String toString() {
+                        return "lag detector for version " + version + " on " + laggingTrackers;
+                    }
+                });
+            }
         }
     }
 
@@ -143,7 +156,7 @@ public class LagDetector {
         }
 
         void increaseAppliedVersion(long appliedVersion) {
-            long maxAppliedVersion = this.appliedVersion.updateAndGet(v -> Math.max(v, appliedVersion));
+            long maxAppliedVersion = this.appliedVersion.accumulateAndGet(appliedVersion, Math::max);
             logger.trace("{} applied version {}, max now {}", this, appliedVersion, maxAppliedVersion);
         }
 
@@ -197,11 +210,13 @@ public class LagDetector {
         private final TransportService transportService;
         private final Client client;
         private final LagListener delegate;
+        private final PrioritizedThrottledTaskRunner<HotThreadsLoggingTask> loggingTaskRunner;
 
         HotThreadsLoggingLagListener(TransportService transportService, Client client, LagListener delegate) {
             this.transportService = transportService;
             this.client = client;
             this.delegate = delegate;
+            this.loggingTaskRunner = new PrioritizedThrottledTaskRunner<>("hot_threads", 1, transportService.getThreadPool().generic());
         }
 
         @Override
@@ -225,21 +240,24 @@ public class LagDetector {
                             return;
                         }
 
-                        logger.debug(
-                            "hot threads from node [{}] lagging at version [{}] despite commit of cluster state version [{}]:\n{}",
-                            discoveryNode.descriptionWithoutAttributes(),
-                            appliedVersion,
-                            expectedVersion,
-                            nodesHotThreadsResponse.getNodes().get(0).getHotThreads()
+                        nodesHotThreadsResponse.mustIncRef();
+                        loggingTaskRunner.enqueueTask(
+                            new HotThreadsLoggingTask(
+                                discoveryNode,
+                                appliedVersion,
+                                expectedVersion,
+                                nodesHotThreadsResponse.getNodes().get(0).getHotThreads(),
+                                Releasables.assertOnce(nodesHotThreadsResponse::decRef)
+                            )
                         );
                     }
 
                     @Override
                     public void onFailure(Exception e) {
                         logger.debug(
-                            new ParameterizedMessage(
-                                "failed to get hot threads from node [{}] lagging at version {} "
-                                    + "despite commit of cluster state version [{}]",
+                            () -> format(
+                                "failed to get hot threads from node [%s] lagging at version %s "
+                                    + "despite commit of cluster state version [%s]",
                                 discoveryNode.descriptionWithoutAttributes(),
                                 appliedVersion,
                                 expectedVersion
@@ -254,12 +272,20 @@ public class LagDetector {
                     @Override
                     public void onResponse(Releasable releasable) {
                         boolean success = false;
-                        final ThreadContext threadContext = transportService.getThreadPool().getThreadContext();
-                        try (ThreadContext.StoredContext ignored = threadContext.stashContext()) {
-                            threadContext.markAsSystemContext();
+                        try (var ignored = transportService.getThreadPool().getThreadContext().newEmptySystemContext()) {
                             client.execute(
-                                NodesHotThreadsAction.INSTANCE,
-                                new NodesHotThreadsRequest(discoveryNode).threads(500),
+                                TransportNodesHotThreadsAction.TYPE,
+                                new NodesHotThreadsRequest(
+                                    discoveryNode,
+                                    new HotThreads.RequestOptions(
+                                        500,
+                                        HotThreads.RequestOptions.DEFAULT.reportType(),
+                                        HotThreads.RequestOptions.DEFAULT.sortOrder(),
+                                        HotThreads.RequestOptions.DEFAULT.interval(),
+                                        HotThreads.RequestOptions.DEFAULT.snapshots(),
+                                        HotThreads.RequestOptions.DEFAULT.ignoreIdleThreads()
+                                    )
+                                ),
                                 ActionListener.runBefore(debugListener, () -> Releasables.close(releasable))
                             );
                             success = true;
@@ -279,6 +305,57 @@ public class LagDetector {
                 // call delegate after transportService#connectToNode to keep existing connection open
                 delegate.onLagDetected(discoveryNode, appliedVersion, expectedVersion);
             }
+        }
+    }
+
+    static class HotThreadsLoggingTask extends AbstractRunnable implements Comparable<HotThreadsLoggingTask> {
+
+        private final String nodeHotThreads;
+        private final Releasable releasable;
+        private final String prefix;
+
+        HotThreadsLoggingTask(
+            DiscoveryNode discoveryNode,
+            long appliedVersion,
+            long expectedVersion,
+            String nodeHotThreads,
+            Releasable releasable
+        ) {
+            this.nodeHotThreads = nodeHotThreads;
+            this.releasable = releasable;
+            this.prefix = Strings.format(
+                "hot threads from node [%s] lagging at version [%d] despite commit of cluster state version [%d]",
+                discoveryNode.descriptionWithoutAttributes(),
+                appliedVersion,
+                expectedVersion
+            );
+        }
+
+        @Override
+        public void onFailure(Exception e) {
+            logger.error(Strings.format("unexpected exception reporting %s", prefix), e);
+        }
+
+        @Override
+        protected void doRun() throws Exception {
+            try (
+                var writer = new OutputStreamWriter(
+                    ChunkedLoggingStream.create(logger, Level.DEBUG, prefix, ReferenceDocs.LAGGING_NODE_TROUBLESHOOTING),
+                    StandardCharsets.UTF_8
+                )
+            ) {
+                writer.write(nodeHotThreads);
+            }
+        }
+
+        @Override
+        public void onAfter() {
+            Releasables.closeExpectNoException(releasable);
+        }
+
+        @Override
+        public int compareTo(HotThreadsLoggingTask o) {
+            return 0;
         }
     }
 
