@@ -1,15 +1,15 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.gateway;
 
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.routing.RecoverySource;
@@ -23,7 +23,7 @@ import org.elasticsearch.cluster.routing.allocation.NodeAllocationResult;
 import org.elasticsearch.cluster.routing.allocation.NodeAllocationResult.ShardStoreInfo;
 import org.elasticsearch.cluster.routing.allocation.RoutingAllocation;
 import org.elasticsearch.cluster.routing.allocation.decider.Decision;
-import org.elasticsearch.cluster.routing.allocation.decider.Decision.Type;
+import org.elasticsearch.common.collect.Iterators;
 import org.elasticsearch.env.ShardLockObtainFailedException;
 import org.elasticsearch.gateway.AsyncShardFetch.FetchResult;
 import org.elasticsearch.gateway.TransportNodesListGatewayStartedShards.NodeGatewayStartedShards;
@@ -33,10 +33,12 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
+
+import static org.elasticsearch.core.Strings.format;
 
 /**
  * The primary shard allocator allocates unassigned primary shards to nodes that hold
@@ -97,7 +99,7 @@ public abstract class PrimaryShardAllocator extends BaseGatewayShardAllocator {
 
         // don't create a new IndexSetting object for every shard as this could cause a lot of garbage
         // on cluster restart if we allocate a boat load of shards
-        final IndexMetadata indexMetadata = allocation.metadata().getIndexSafe(unassignedShard.index());
+        final IndexMetadata indexMetadata = allocation.metadata().indexMetadata(unassignedShard.index());
         final Set<String> inSyncAllocationIds = indexMetadata.inSyncAllocationIds(unassignedShard.id());
         final boolean snapshotRestore = unassignedShard.recoverySource().getType() == RecoverySource.Type.SNAPSHOT;
 
@@ -148,71 +150,17 @@ public abstract class PrimaryShardAllocator extends BaseGatewayShardAllocator {
             }
         }
 
-        NodesToAllocate nodesToAllocate = buildNodesToAllocate(
+        AllocationChoice choice = chooseFromCandidates(
             allocation,
             nodeShardsResult.orderedAllocationCandidates,
             unassignedShard,
-            false
+            false,
+            logger
         );
-        DiscoveryNode node = null;
-        String allocationId = null;
-        boolean throttled = false;
-        if (nodesToAllocate.yesNodeShards.isEmpty() == false) {
-            DecidedNode decidedNode = nodesToAllocate.yesNodeShards.get(0);
-            logger.debug(
-                "[{}][{}]: allocating [{}] to [{}] on primary allocation",
-                unassignedShard.index(),
-                unassignedShard.id(),
-                unassignedShard,
-                decidedNode.nodeShardState.getNode()
-            );
-            node = decidedNode.nodeShardState.getNode();
-            allocationId = decidedNode.nodeShardState.allocationId();
-        } else if (nodesToAllocate.throttleNodeShards.isEmpty() && nodesToAllocate.noNodeShards.isEmpty() == false) {
-            // The deciders returned a NO decision for all nodes with shard copies, so we check if primary shard
-            // can be force-allocated to one of the nodes.
-            nodesToAllocate = buildNodesToAllocate(allocation, nodeShardsResult.orderedAllocationCandidates, unassignedShard, true);
-            if (nodesToAllocate.yesNodeShards.isEmpty() == false) {
-                final DecidedNode decidedNode = nodesToAllocate.yesNodeShards.get(0);
-                final NodeGatewayStartedShards nodeShardState = decidedNode.nodeShardState;
-                logger.debug(
-                    "[{}][{}]: allocating [{}] to [{}] on forced primary allocation",
-                    unassignedShard.index(),
-                    unassignedShard.id(),
-                    unassignedShard,
-                    nodeShardState.getNode()
-                );
-                node = nodeShardState.getNode();
-                allocationId = nodeShardState.allocationId();
-            } else if (nodesToAllocate.throttleNodeShards.isEmpty() == false) {
-                logger.debug(
-                    "[{}][{}]: throttling allocation [{}] to [{}] on forced primary allocation",
-                    unassignedShard.index(),
-                    unassignedShard.id(),
-                    unassignedShard,
-                    nodesToAllocate.throttleNodeShards
-                );
-                throttled = true;
-            } else {
-                logger.debug(
-                    "[{}][{}]: forced primary allocation denied [{}]",
-                    unassignedShard.index(),
-                    unassignedShard.id(),
-                    unassignedShard
-                );
-            }
-        } else {
-            // we are throttling this, since we are allowed to allocate to this node but there are enough allocations
-            // taking place on the node currently, ignore it for now
-            logger.debug(
-                "[{}][{}]: throttling allocation [{}] to [{}] on primary allocation",
-                unassignedShard.index(),
-                unassignedShard.id(),
-                unassignedShard,
-                nodesToAllocate.throttleNodeShards
-            );
-            throttled = true;
-        }
+        final NodesToAllocate nodesToAllocate = choice.nodesToAllocate();
+        final DiscoveryNode node = choice.node();
+        final String allocationId = choice.allocationId();
+        final Decision.Type decisionType = choice.decisionType();
 
         List<NodeAllocationResult> nodeResults = null;
         if (explain) {
@@ -220,9 +168,10 @@ public abstract class PrimaryShardAllocator extends BaseGatewayShardAllocator {
         }
         if (allocation.hasPendingAsyncFetch()) {
             return AllocateUnassignedDecision.no(AllocationStatus.FETCHING_SHARD_DATA, nodeResults);
-        } else if (node != null) {
+        } else if (decisionType == Decision.Type.YES || decisionType == Decision.Type.NOT_PREFERRED) {
+            assert node != null : "node must not be null if decisionType is YES or NOT_PREFERRED";
             return AllocateUnassignedDecision.yes(node, allocationId, nodeResults, false);
-        } else if (throttled) {
+        } else if (decisionType == Decision.Type.THROTTLE) {
             return AllocateUnassignedDecision.throttle(nodeResults);
         } else {
             return AllocateUnassignedDecision.no(AllocationStatus.DECIDERS_NO, nodeResults, true);
@@ -241,24 +190,21 @@ public abstract class PrimaryShardAllocator extends BaseGatewayShardAllocator {
         Collection<NodeGatewayStartedShards> ineligibleShards;
         if (nodesToAllocate != null) {
             final Set<DiscoveryNode> discoNodes = new HashSet<>();
-            nodeResults.addAll(
-                Stream.of(nodesToAllocate.yesNodeShards, nodesToAllocate.throttleNodeShards, nodesToAllocate.noNodeShards)
-                    .flatMap(Collection::stream)
-                    .map(dnode -> {
-                        discoNodes.add(dnode.nodeShardState.getNode());
-                        return new NodeAllocationResult(
-                            dnode.nodeShardState.getNode(),
-                            shardStoreInfo(dnode.nodeShardState, inSyncAllocationIds),
-                            dnode.decision
-                        );
-                    })
-                    .collect(Collectors.toList())
-            );
+            for (DecidedNode dnode : nodesToAllocate) {
+                discoNodes.add(dnode.nodeShardState.getNode());
+                nodeResults.add(
+                    new NodeAllocationResult(
+                        dnode.nodeShardState.getNode(),
+                        shardStoreInfo(dnode.nodeShardState, inSyncAllocationIds),
+                        dnode.decision
+                    )
+                );
+            }
             ineligibleShards = fetchedShardData.getData()
                 .values()
                 .stream()
                 .filter(shardData -> discoNodes.contains(shardData.getNode()) == false)
-                .collect(Collectors.toList());
+                .toList();
         } else {
             // there were no shard copies that were eligible for being assigned the allocation,
             // so all fetched shard data are ineligible shards
@@ -268,7 +214,7 @@ public abstract class PrimaryShardAllocator extends BaseGatewayShardAllocator {
         nodeResults.addAll(
             ineligibleShards.stream()
                 .map(shardData -> new NodeAllocationResult(shardData.getNode(), shardStoreInfo(shardData, inSyncAllocationIds), null))
-                .collect(Collectors.toList())
+                .toList()
         );
 
         return nodeResults;
@@ -292,7 +238,7 @@ public abstract class PrimaryShardAllocator extends BaseGatewayShardAllocator {
      * inSyncAllocationIds are added to the list. Otherwise, any node that has a shard is added to the list, but
      * entries with matching allocation id are always at the front of the list.
      */
-    protected static NodeShardsResult buildNodeShardsResult(
+    private static NodeShardsResult buildNodeShardsResult(
         ShardRouting shard,
         boolean matchAnyShard,
         Set<String> ignoreNodes,
@@ -320,8 +266,8 @@ public abstract class PrimaryShardAllocator extends BaseGatewayShardAllocator {
                 final String finalAllocationId = allocationId;
                 if (nodeShardState.storeException() instanceof ShardLockObtainFailedException) {
                     logger.trace(
-                        () -> new ParameterizedMessage(
-                            "[{}] on node [{}] has allocation id [{}] but the store can not be "
+                        () -> format(
+                            "[%s] on node [%s] has allocation id [%s] but the store can not be "
                                 + "opened as it's locked, treating as valid shard",
                             shard,
                             nodeShardState.getNode(),
@@ -331,8 +277,8 @@ public abstract class PrimaryShardAllocator extends BaseGatewayShardAllocator {
                     );
                 } else {
                     logger.trace(
-                        () -> new ParameterizedMessage(
-                            "[{}] on node [{}] has allocation id [{}] but the store can not be " + "opened, treating as no allocation id",
+                        () -> format(
+                            "[%s] on node [%s] has allocation id [%s] but the store can not be " + "opened, treating as no allocation id",
                             shard,
                             nodeShardState.getNode(),
                             finalAllocationId
@@ -380,7 +326,7 @@ public abstract class PrimaryShardAllocator extends BaseGatewayShardAllocator {
     }
 
     /**
-     * Split the list of node shard states into groups yes/no/throttle based on allocation deciders
+     * Split the list of node shard states into groups by allocation decider decision.
      */
     private static NodesToAllocate buildNodesToAllocate(
         RoutingAllocation allocation,
@@ -389,7 +335,8 @@ public abstract class PrimaryShardAllocator extends BaseGatewayShardAllocator {
         boolean forceAllocate
     ) {
         List<DecidedNode> yesNodeShards = new ArrayList<>();
-        List<DecidedNode> throttledNodeShards = new ArrayList<>();
+        List<DecidedNode> throttleNodeShards = new ArrayList<>();
+        List<DecidedNode> notPreferredNodeShards = new ArrayList<>();
         List<DecidedNode> noNodeShards = new ArrayList<>();
         for (NodeGatewayStartedShards nodeShardState : nodeShardStates) {
             RoutingNode node = allocation.routingNodes().node(nodeShardState.getNode().getId());
@@ -401,56 +348,135 @@ public abstract class PrimaryShardAllocator extends BaseGatewayShardAllocator {
                 ? allocation.deciders().canForceAllocatePrimary(shardRouting, node, allocation)
                 : allocation.deciders().canAllocate(shardRouting, node, allocation);
             DecidedNode decidedNode = new DecidedNode(nodeShardState, decision);
-            if (decision.type() == Type.THROTTLE) {
-                throttledNodeShards.add(decidedNode);
-            } else if (decision.type() == Type.NO) {
-                noNodeShards.add(decidedNode);
-            } else {
-                yesNodeShards.add(decidedNode);
-            }
+            (switch (decision.type()) {
+                case YES -> yesNodeShards;
+                case THROTTLE -> throttleNodeShards;
+                case NOT_PREFERRED -> notPreferredNodeShards;
+                case NO -> noNodeShards;
+            }).add(decidedNode);
         }
         return new NodesToAllocate(
             Collections.unmodifiableList(yesNodeShards),
-            Collections.unmodifiableList(throttledNodeShards),
+            Collections.unmodifiableList(throttleNodeShards),
+            Collections.unmodifiableList(notPreferredNodeShards),
             Collections.unmodifiableList(noNodeShards)
         );
     }
 
     protected abstract FetchResult<NodeGatewayStartedShards> fetchData(ShardRouting shard, RoutingAllocation allocation);
 
-    private static class NodeShardsResult {
-        final List<NodeGatewayStartedShards> orderedAllocationCandidates;
-        final int allocationsFound;
+    private record NodeShardsResult(List<NodeGatewayStartedShards> orderedAllocationCandidates, int allocationsFound) {}
 
-        NodeShardsResult(List<NodeGatewayStartedShards> orderedAllocationCandidates, int allocationsFound) {
-            this.orderedAllocationCandidates = orderedAllocationCandidates;
-            this.allocationsFound = allocationsFound;
+    /**
+     * Chooses a node (or throttle/deny) from allocation candidates. If the only decisions are NO and
+     * force allocation has not been tried yet, recurses with {@code forceAllocate == true}.
+     */
+    private static AllocationChoice chooseFromCandidates(
+        RoutingAllocation allocation,
+        List<NodeGatewayStartedShards> orderedAllocationCandidates,
+        ShardRouting unassignedShard,
+        boolean forceAllocate,
+        Logger logger
+    ) {
+        NodesToAllocate nodesToAllocate = buildNodesToAllocate(allocation, orderedAllocationCandidates, unassignedShard, forceAllocate);
+        String allocationContext = forceAllocate ? "forced primary allocation" : "primary allocation";
+
+        if (nodesToAllocate.yesNodeShards.isEmpty() == false) {
+            DecidedNode decidedNode = nodesToAllocate.yesNodeShards.get(0);
+            logger.debug(
+                "[{}][{}]: allocating [{}] to [{}] on {}",
+                unassignedShard.index(),
+                unassignedShard.id(),
+                unassignedShard,
+                decidedNode.nodeShardState.getNode(),
+                allocationContext
+            );
+            return new AllocationChoice(
+                decidedNode.nodeShardState.getNode(),
+                decidedNode.nodeShardState.allocationId(),
+                Decision.Type.YES,
+                nodesToAllocate
+            );
+        }
+        if (nodesToAllocate.throttleNodeShards.isEmpty() == false) {
+            logger.debug(
+                "[{}][{}]: throttling allocation [{}] to [{}] on {}",
+                unassignedShard.index(),
+                unassignedShard.id(),
+                unassignedShard,
+                nodesToAllocate.throttleNodeShards,
+                allocationContext
+            );
+            return new AllocationChoice(null, null, Decision.Type.THROTTLE, nodesToAllocate);
+        }
+        if (nodesToAllocate.notPreferredNodeShards.isEmpty() == false) {
+            DecidedNode decidedNode = nodesToAllocate.notPreferredNodeShards.get(0);
+            logger.debug(
+                "[{}][{}]: allocating [{}] to [{}] on {} (not preferred)",
+                unassignedShard.index(),
+                unassignedShard.id(),
+                unassignedShard,
+                decidedNode.nodeShardState.getNode(),
+                allocationContext
+            );
+            return new AllocationChoice(
+                decidedNode.nodeShardState.getNode(),
+                decidedNode.nodeShardState.allocationId(),
+                Decision.Type.NOT_PREFERRED,
+                nodesToAllocate
+            );
+        }
+        if (nodesToAllocate.noNodeShards.isEmpty() == false) {
+            if (forceAllocate) {
+                logger.debug(
+                    "[{}][{}]: forced primary allocation denied [{}]",
+                    unassignedShard.index(),
+                    unassignedShard.id(),
+                    unassignedShard
+                );
+            } else {
+                return chooseFromCandidates(allocation, orderedAllocationCandidates, unassignedShard, true, logger);
+            }
+        }
+        return new AllocationChoice(null, null, Decision.Type.NO, nodesToAllocate);
+    }
+
+    /**
+     * Result of choosing a node from allocation candidates, possibly after trying force allocation.
+     * The decision type is one of YES, NOT_PREFERRED, THROTTLE, or NO.
+     */
+    private record AllocationChoice(DiscoveryNode node, String allocationId, Decision.Type decisionType, NodesToAllocate nodesToAllocate) {
+        AllocationChoice {
+            assert (node != null) == (decisionType == Decision.Type.YES || decisionType == Decision.Type.NOT_PREFERRED)
+                : "node must be non-null iff decisionType is YES or NOT_PREFERRED";
         }
     }
 
-    static class NodesToAllocate {
-        final List<DecidedNode> yesNodeShards;
-        final List<DecidedNode> throttleNodeShards;
-        final List<DecidedNode> noNodeShards;
+    record NodesToAllocate(
+        List<DecidedNode> yesNodeShards,
+        List<DecidedNode> throttleNodeShards,
+        List<DecidedNode> notPreferredNodeShards,
+        List<DecidedNode> noNodeShards
+    ) implements Iterable<DecidedNode> {
 
-        NodesToAllocate(List<DecidedNode> yesNodeShards, List<DecidedNode> throttleNodeShards, List<DecidedNode> noNodeShards) {
-            this.yesNodeShards = yesNodeShards;
-            this.throttleNodeShards = throttleNodeShards;
-            this.noNodeShards = noNodeShards;
+        /**
+         * Iterate over all decided nodes in order: YES, THROTTLE, NOT_PREFERRED, NO.
+         */
+        @Override
+        public Iterator<DecidedNode> iterator() {
+            return Iterators.concat(
+                yesNodeShards.iterator(),
+                throttleNodeShards.iterator(),
+                notPreferredNodeShards.iterator(),
+                noNodeShards.iterator()
+            );
         }
     }
 
     /**
-     * This class encapsulates the shard state retrieved from a node and the decision that was made
+     * Encapsulates the shard state retrieved from a node and the decision that was made
      * by the allocator for allocating to the node that holds the shard copy.
+     * Package-visible for testing.
      */
-    private static class DecidedNode {
-        final NodeGatewayStartedShards nodeShardState;
-        final Decision decision;
-
-        private DecidedNode(NodeGatewayStartedShards nodeShardState, Decision decision) {
-            this.nodeShardState = nodeShardState;
-            this.decision = decision;
-        }
-    }
+    record DecidedNode(NodeGatewayStartedShards nodeShardState, Decision decision) {}
 }
