@@ -1,22 +1,26 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.repositories;
 
 import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.common.util.Maps;
+import org.elasticsearch.common.util.set.Sets;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.snapshots.SnapshotId;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
@@ -28,7 +32,7 @@ import java.util.stream.Collectors;
  */
 public final class IndexMetaDataGenerations {
 
-    public static final IndexMetaDataGenerations EMPTY = new IndexMetaDataGenerations(Collections.emptyMap(), Collections.emptyMap());
+    public static final IndexMetaDataGenerations EMPTY = new IndexMetaDataGenerations(Map.of(), Map.of());
 
     /**
      * Map of {@link SnapshotId} to a map of the indices in a snapshot mapping {@link IndexId} to metadata identifiers.
@@ -90,7 +94,7 @@ public final class IndexMetaDataGenerations {
      */
     @Nullable
     public String snapshotIndexMetadataIdentifier(SnapshotId snapshotId, IndexId indexId) {
-        return lookup.getOrDefault(snapshotId, Collections.emptyMap()).get(indexId);
+        return lookup.getOrDefault(snapshotId, Map.of()).get(indexId);
     }
 
     /**
@@ -110,11 +114,11 @@ public final class IndexMetaDataGenerations {
         final Map<String, String> updatedIndexMetaIdentifiers = new HashMap<>(identifiers);
         updatedIndexMetaIdentifiers.putAll(newIdentifiers);
         if (newLookup.isEmpty() == false) {
-            final Map<String, String> identifierDeduplicator = new HashMap<>(this.identifiers.size());
+            final Map<String, String> identifierDeduplicator = Maps.newMapWithExpectedSize(this.identifiers.size());
             for (String identifier : identifiers.keySet()) {
                 identifierDeduplicator.put(identifier, identifier);
             }
-            final Map<IndexId, String> fixedLookup = new HashMap<>(newLookup.size());
+            final Map<IndexId, String> fixedLookup = Maps.newMapWithExpectedSize(newLookup.size());
             for (Map.Entry<IndexId, String> entry : newLookup.entrySet()) {
                 final String generation = entry.getValue();
                 fixedLookup.put(entry.getKey(), identifierDeduplicator.getOrDefault(generation, generation));
@@ -132,12 +136,20 @@ public final class IndexMetaDataGenerations {
      * @return new instance without the given snapshot
      */
     public IndexMetaDataGenerations withRemovedSnapshots(Collection<SnapshotId> snapshotIds) {
-        final Map<SnapshotId, Map<IndexId, String>> updatedIndexMetaLookup = new HashMap<>(lookup);
-        updatedIndexMetaLookup.keySet().removeAll(snapshotIds);
-        final Map<String, String> updatedIndexMetaIdentifiers = new HashMap<>(identifiers);
-        updatedIndexMetaIdentifiers.keySet()
-            .removeIf(k -> updatedIndexMetaLookup.values().stream().noneMatch(identifiers -> identifiers.containsValue(k)));
-        return new IndexMetaDataGenerations(updatedIndexMetaLookup, updatedIndexMetaIdentifiers);
+        final var snapshotIdsSet = new HashSet<>(snapshotIds);
+        final Map<SnapshotId, Map<IndexId, String>> retainedIndexMetaLookup = Maps.newMapWithExpectedSize(lookup.size());
+        final Set<String> retainedBlobUUIDs = Sets.newHashSetWithExpectedSize(identifiers.size());
+        for (Map.Entry<SnapshotId, Map<IndexId, String>> e : lookup.entrySet()) {
+            if (snapshotIdsSet.contains(e.getKey()) == false) {
+                retainedIndexMetaLookup.put(e.getKey(), e.getValue());
+                retainedBlobUUIDs.addAll(e.getValue().values());
+            }
+        }
+        final Map<String, String> retainedIndexMetaIdentifiers = identifiers.entrySet()
+            .stream()
+            .filter(e -> retainedBlobUUIDs.contains(e.getKey()))
+            .collect(Collectors.toUnmodifiableMap(Map.Entry::getKey, Map.Entry::getValue));
+        return new IndexMetaDataGenerations(retainedIndexMetaLookup, retainedIndexMetaIdentifiers);
     }
 
     @Override
