@@ -1,31 +1,32 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.action.fieldcaps;
 
-import com.carrotsearch.hppc.ObjectIntHashMap;
-import com.carrotsearch.hppc.ObjectIntMap;
-import com.carrotsearch.hppc.cursors.IntCursor;
-import com.carrotsearch.hppc.cursors.ObjectIntCursor;
-
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.lucene.util.SetOnce;
-import org.elasticsearch.Version;
+import org.elasticsearch.TransportVersion;
 import org.elasticsearch.action.OriginalIndices;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ESAllocationTestCase;
 import org.elasticsearch.cluster.EmptyClusterInfoService;
+import org.elasticsearch.cluster.TestShardRoutingRoleStrategies;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectId;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
+import org.elasticsearch.cluster.project.TestProjectResolvers;
+import org.elasticsearch.cluster.routing.GlobalRoutingTable;
 import org.elasticsearch.cluster.routing.IndexRoutingTable;
 import org.elasticsearch.cluster.routing.OperationRouting;
 import org.elasticsearch.cluster.routing.RoutingTable;
@@ -37,6 +38,7 @@ import org.elasticsearch.cluster.routing.allocation.decider.EnableAllocationDeci
 import org.elasticsearch.cluster.routing.allocation.decider.ReplicaAfterPrimaryActiveAllocationDecider;
 import org.elasticsearch.cluster.routing.allocation.decider.SameShardAllocationDecider;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.common.Randomness;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.network.NetworkService;
 import org.elasticsearch.common.settings.ClusterSettings;
@@ -45,17 +47,23 @@ import org.elasticsearch.common.util.PageCacheRecycler;
 import org.elasticsearch.common.util.concurrent.AbstractRunnable;
 import org.elasticsearch.common.util.concurrent.ConcurrentCollections;
 import org.elasticsearch.common.util.set.Sets;
+import org.elasticsearch.index.IndexMode;
+import org.elasticsearch.index.IndexVersions;
+import org.elasticsearch.index.query.CoordinatorRewriteContextProvider;
 import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.index.query.RangeQueryBuilder;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.indices.breaker.NoneCircuitBreakerService;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.tasks.TaskId;
+import org.elasticsearch.test.VersionUtils;
 import org.elasticsearch.test.gateway.TestGatewayAllocator;
+import org.elasticsearch.test.index.IndexVersionUtils;
 import org.elasticsearch.threadpool.TestThreadPool;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TcpTransport;
 import org.elasticsearch.transport.Transport;
+import org.elasticsearch.transport.TransportException;
 import org.elasticsearch.transport.TransportInterceptor;
 import org.elasticsearch.transport.TransportRequest;
 import org.elasticsearch.transport.TransportRequestOptions;
@@ -81,8 +89,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import static org.elasticsearch.action.fieldcaps.FieldCapabilitiesResponseTests.randomIndexResponse;
-import static org.elasticsearch.test.VersionUtils.randomVersion;
+import static org.elasticsearch.common.settings.ClusterSettings.createBuiltInClusterSettings;
 import static org.hamcrest.Matchers.anEmptyMap;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.everyItem;
@@ -103,23 +110,22 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     static final Logger logger = LogManager.getLogger(RequestDispatcherTests.class);
 
     public void testHappyCluster() throws Exception {
-        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).collect(Collectors.toList());
+        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).toList();
         final ClusterState clusterState;
+        final ProjectId projectId = randomProjectIdOrDefault();
         {
             DiscoveryNodes.Builder discoNodes = DiscoveryNodes.builder();
             int numNodes = randomIntBetween(1, 10);
             for (int i = 0; i < numNodes; i++) {
-                discoNodes.add(newNode("node_" + i, randomVersion(random())));
+                discoNodes.add(newNode("node_" + i, VersionUtils.randomVersion(), IndexVersionUtils.randomVersion()));
             }
-            Metadata.Builder metadata = Metadata.builder();
+            ProjectMetadata.Builder metadata = ProjectMetadata.builder(projectId);
             for (String index : allIndices) {
-                final Settings.Builder settings = Settings.builder()
-                    .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, between(1, 10))
-                    .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 2))
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.minimumIndexCompatibilityVersion());
-                metadata.put(IndexMetadata.builder(index).settings(settings));
+                metadata.put(
+                    IndexMetadata.builder(index).settings(indexSettings(IndexVersions.MINIMUM_COMPATIBLE, between(1, 10), between(0, 2)))
+                );
             }
-            clusterState = newClusterState(metadata.build(), discoNodes.build());
+            clusterState = newClusterState(Metadata.builder().put(metadata).build(), discoNodes.build());
         }
         try (TestTransportService transportService = TestTransportService.newTestTransportService()) {
             final List<String> indices = randomSubsetOf(between(1, allIndices.size()), allIndices);
@@ -129,6 +135,8 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             final RequestDispatcher dispatcher = new RequestDispatcher(
                 mockClusterService(clusterState),
                 transportService,
+                TestProjectResolvers.singleProject(projectId),
+                coordinatorRewriteContextProvider(),
                 newRandomParentTask(),
                 randomFieldCapRequest(withFilter),
                 OriginalIndices.NONE,
@@ -174,23 +182,22 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     }
 
     public void testRetryThenOk() throws Exception {
-        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).collect(Collectors.toList());
+        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).toList();
         final ClusterState clusterState;
+        final ProjectId projectId = randomProjectIdOrDefault();
         {
             DiscoveryNodes.Builder discoNodes = DiscoveryNodes.builder();
             int numNodes = randomIntBetween(2, 10);
             for (int i = 0; i < numNodes; i++) {
-                discoNodes.add(newNode("node_" + i, randomVersion(random())));
+                discoNodes.add(newNode("node_" + i, VersionUtils.randomVersion(), IndexVersionUtils.randomVersion()));
             }
-            Metadata.Builder metadata = Metadata.builder();
+            ProjectMetadata.Builder metadata = ProjectMetadata.builder(projectId);
             for (String index : allIndices) {
-                final Settings.Builder settings = Settings.builder()
-                    .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, between(1, 10))
-                    .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(1, 3))
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.minimumIndexCompatibilityVersion());
-                metadata.put(IndexMetadata.builder(index).settings(settings));
+                metadata.put(
+                    IndexMetadata.builder(index).settings(indexSettings(IndexVersions.MINIMUM_COMPATIBLE, between(1, 10), between(1, 3)))
+                );
             }
-            clusterState = newClusterState(metadata.build(), discoNodes.build());
+            clusterState = newClusterState(Metadata.builder().put(metadata).build(), discoNodes.build());
         }
         try (TestTransportService transportService = TestTransportService.newTestTransportService()) {
             final List<String> indices = randomSubsetOf(between(1, allIndices.size()), allIndices);
@@ -200,6 +207,8 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             final RequestDispatcher dispatcher = new RequestDispatcher(
                 mockClusterService(clusterState),
                 transportService,
+                TestProjectResolvers.singleProject(projectId),
+                coordinatorRewriteContextProvider(),
                 newRandomParentTask(),
                 randomFieldCapRequest(withFilter),
                 OriginalIndices.NONE,
@@ -261,9 +270,9 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             assertThat(dispatcher.executionRound(), equalTo(maxRound + 1));
             for (String index : indices) {
                 if (withFilter) {
-                    ObjectIntMap<ShardId> copies = new ObjectIntHashMap<>();
+                    Map<ShardId, Integer> copies = new HashMap<>();
                     for (ShardRouting shardRouting : clusterState.routingTable().index(index).randomAllActiveShardsIt()) {
-                        copies.addTo(shardRouting.shardId(), 1);
+                        copies.merge(shardRouting.shardId(), 1, Integer::sum);
                     }
                     final int executedRounds = maxFailedRounds.getOrDefault(index, 0);
                     for (int round = 0; round <= executedRounds; round++) {
@@ -274,10 +283,10 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
                             }
                         }
                         final Set<ShardId> availableShards = new HashSet<>();
-                        for (ObjectIntCursor<ShardId> e : copies) {
-                            if (e.value > 0) {
-                                availableShards.add(e.key);
-                                copies.addTo(e.key, -1);
+                        for (var e : copies.entrySet()) {
+                            if (e.getValue() > 0) {
+                                availableShards.add(e.getKey());
+                                copies.merge(e.getKey(), -1, Integer::sum);
                             }
                         }
                         assertThat("round: " + round, requestedShards, equalTo(availableShards));
@@ -296,23 +305,22 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     }
 
     public void testRetryButFails() throws Exception {
-        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).collect(Collectors.toList());
+        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).toList();
         final ClusterState clusterState;
+        final ProjectId projectId = randomProjectIdOrDefault();
         {
             DiscoveryNodes.Builder discoNodes = DiscoveryNodes.builder();
             int numNodes = randomIntBetween(1, 10);
             for (int i = 0; i < numNodes; i++) {
-                discoNodes.add(newNode("node_" + i, randomVersion(random())));
+                discoNodes.add(newNode("node_" + i, VersionUtils.randomVersion(), IndexVersionUtils.randomVersion()));
             }
-            Metadata.Builder metadata = Metadata.builder();
+            ProjectMetadata.Builder metadata = ProjectMetadata.builder(projectId);
             for (String index : allIndices) {
-                final Settings.Builder settings = Settings.builder()
-                    .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, between(1, 10))
-                    .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 3))
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.minimumIndexCompatibilityVersion());
-                metadata.put(IndexMetadata.builder(index).settings(settings));
+                metadata.put(
+                    IndexMetadata.builder(index).settings(indexSettings(IndexVersions.MINIMUM_COMPATIBLE, between(1, 10), between(0, 3)))
+                );
             }
-            clusterState = newClusterState(metadata.build(), discoNodes.build());
+            clusterState = newClusterState(Metadata.builder().put(metadata).build(), discoNodes.build());
         }
         try (TestTransportService transportService = TestTransportService.newTestTransportService()) {
             final List<String> indices = randomSubsetOf(between(1, allIndices.size()), allIndices);
@@ -322,6 +330,8 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             final RequestDispatcher dispatcher = new RequestDispatcher(
                 mockClusterService(clusterState),
                 transportService,
+                TestProjectResolvers.singleProject(projectId),
+                coordinatorRewriteContextProvider(),
                 newRandomParentTask(),
                 randomFieldCapRequest(withFilter),
                 OriginalIndices.NONE,
@@ -381,9 +391,9 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             assertThat(dispatcher.executionRound(), equalTo(maxRound));
             for (String index : indices) {
                 if (withFilter) {
-                    ObjectIntMap<ShardId> copies = new ObjectIntHashMap<>();
+                    Map<ShardId, Integer> copies = new HashMap<>();
                     for (ShardRouting shardRouting : clusterState.routingTable().index(index).randomAllActiveShardsIt()) {
-                        copies.addTo(shardRouting.shardId(), 1);
+                        copies.merge(shardRouting.shardId(), 1, Integer::sum);
                     }
                     final int executedRounds = failedIndices.contains(index) ? maxPossibleRounds(clusterState, index, true) : 0;
                     for (int round = 0; round <= executedRounds; round++) {
@@ -394,17 +404,17 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
                             }
                         }
                         final Set<ShardId> availableShards = new HashSet<>();
-                        for (ObjectIntCursor<ShardId> e : copies) {
-                            if (e.value > 0) {
-                                availableShards.add(e.key);
-                                copies.addTo(e.key, -1);
+                        for (var e : copies.entrySet()) {
+                            if (e.getValue() > 0) {
+                                availableShards.add(e.getKey());
+                                copies.merge(e.getKey(), -1, Integer::sum);
                             }
                         }
                         assertThat("round: " + round, requestedShards, equalTo(availableShards));
                     }
                     if (failedIndices.contains(index)) {
-                        for (ObjectIntCursor<ShardId> cursor : copies) {
-                            assertThat("All copies of shard " + cursor.key + " must be tried", cursor.value, equalTo(0));
+                        for (var e : copies.entrySet()) {
+                            assertThat("All copies of shard " + e.getKey() + " must be tried", e.getValue(), equalTo(0));
                         }
                     }
                 } else {
@@ -420,23 +430,22 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     }
 
     public void testSuccessWithAnyMatch() throws Exception {
-        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).collect(Collectors.toList());
+        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).toList();
         final ClusterState clusterState;
+        final ProjectId projectId = randomProjectIdOrDefault();
         {
             DiscoveryNodes.Builder discoNodes = DiscoveryNodes.builder();
             int numNodes = randomIntBetween(1, 10);
             for (int i = 0; i < numNodes; i++) {
-                discoNodes.add(newNode("node_" + i, randomVersion(random())));
+                discoNodes.add(newNode("node_" + i, VersionUtils.randomVersion(), IndexVersionUtils.randomVersion()));
             }
-            Metadata.Builder metadata = Metadata.builder();
+            ProjectMetadata.Builder metadata = ProjectMetadata.builder(projectId);
             for (String index : allIndices) {
-                final Settings.Builder settings = Settings.builder()
-                    .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, between(2, 10))
-                    .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 2))
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.minimumIndexCompatibilityVersion());
-                metadata.put(IndexMetadata.builder(index).settings(settings));
+                metadata.put(
+                    IndexMetadata.builder(index).settings(indexSettings(IndexVersions.MINIMUM_COMPATIBLE, between(2, 10), between(0, 2)))
+                );
             }
-            clusterState = newClusterState(metadata.build(), discoNodes.build());
+            clusterState = newClusterState(Metadata.builder().put(metadata).build(), discoNodes.build());
         }
         try (TestTransportService transportService = TestTransportService.newTestTransportService()) {
             final List<String> indices = randomSubsetOf(between(1, allIndices.size()), allIndices);
@@ -446,6 +455,8 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             final RequestDispatcher dispatcher = new RequestDispatcher(
                 mockClusterService(clusterState),
                 transportService,
+                TestProjectResolvers.singleProject(projectId),
+                coordinatorRewriteContextProvider(),
                 newRandomParentTask(),
                 randomFieldCapRequest(withFilter),
                 OriginalIndices.NONE,
@@ -458,7 +469,6 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             );
             final RequestTracker requestTracker = new RequestTracker(dispatcher, clusterState.routingTable(), withFilter);
             transportService.requestTracker.set(requestTracker);
-            final AtomicInteger failedTimes = new AtomicInteger();
             final Set<ShardId> allUnmatchedShardIds = new HashSet<>();
             for (String index : indices) {
                 final Set<ShardId> shardIds = new HashSet<>();
@@ -519,24 +529,22 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     }
 
     public void testStopAfterAllShardsUnmatched() throws Exception {
-        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).collect(Collectors.toList());
+        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).toList();
         final ClusterState clusterState;
-        final boolean newVersionOnly = randomBoolean();
+        final ProjectId projectId = randomProjectIdOrDefault();
         {
             DiscoveryNodes.Builder discoNodes = DiscoveryNodes.builder();
             int numNodes = randomIntBetween(1, 10);
             for (int i = 0; i < numNodes; i++) {
-                discoNodes.add(newNode("node_" + i, randomVersion(random())));
+                discoNodes.add(newNode("node_" + i, VersionUtils.randomVersion(), IndexVersionUtils.randomVersion()));
             }
-            Metadata.Builder metadata = Metadata.builder();
+            ProjectMetadata.Builder metadata = ProjectMetadata.builder(projectId);
             for (String index : allIndices) {
-                final Settings.Builder settings = Settings.builder()
-                    .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, between(1, 10))
-                    .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 2))
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.minimumIndexCompatibilityVersion());
-                metadata.put(IndexMetadata.builder(index).settings(settings));
+                metadata.put(
+                    IndexMetadata.builder(index).settings(indexSettings(IndexVersions.MINIMUM_COMPATIBLE, between(1, 10), between(0, 2)))
+                );
             }
-            clusterState = newClusterState(metadata.build(), discoNodes.build());
+            clusterState = newClusterState(Metadata.builder().put(metadata).build(), discoNodes.build());
         }
         try (TestTransportService transportService = TestTransportService.newTestTransportService()) {
             final List<String> indices = randomSubsetOf(between(1, allIndices.size()), allIndices);
@@ -546,6 +554,8 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             final RequestDispatcher dispatcher = new RequestDispatcher(
                 mockClusterService(clusterState),
                 transportService,
+                TestProjectResolvers.singleProject(projectId),
+                coordinatorRewriteContextProvider(),
                 newRandomParentTask(),
                 randomFieldCapRequest(withFilter),
                 OriginalIndices.NONE,
@@ -558,7 +568,6 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             );
             final RequestTracker requestTracker = new RequestTracker(dispatcher, clusterState.routingTable(), withFilter);
             transportService.requestTracker.set(requestTracker);
-            final AtomicInteger failedTimes = new AtomicInteger();
             final List<String> unmatchedIndices = randomSubsetOf(between(1, indices.size()), indices);
             transportService.setTransportInterceptor(new TransportInterceptor.AsyncSender() {
                 @Override
@@ -613,6 +622,66 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
         }
     }
 
+    public void testFailWithSameException() throws Exception {
+        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).toList();
+        final ClusterState clusterState;
+        final ProjectId projectId = randomProjectIdOrDefault();
+        {
+            DiscoveryNodes.Builder discoNodes = DiscoveryNodes.builder();
+            int numNodes = randomIntBetween(1, 10);
+            for (int i = 0; i < numNodes; i++) {
+                discoNodes.add(newNode("node_" + i, VersionUtils.randomVersion(), IndexVersionUtils.randomVersion()));
+            }
+            ProjectMetadata.Builder metadata = ProjectMetadata.builder(projectId);
+            for (String index : allIndices) {
+                metadata.put(
+                    IndexMetadata.builder(index).settings(indexSettings(IndexVersions.MINIMUM_COMPATIBLE, between(1, 10), between(0, 3)))
+                );
+            }
+            clusterState = newClusterState(Metadata.builder().put(metadata).build(), discoNodes.build());
+        }
+        try (TestTransportService transportService = TestTransportService.newTestTransportService()) {
+            final List<String> targetIndices = randomSubsetOf(between(1, allIndices.size()), allIndices);
+            final ResponseCollector responseCollector = new ResponseCollector();
+            boolean withFilter = randomBoolean();
+            final RequestDispatcher dispatcher = new RequestDispatcher(
+                mockClusterService(clusterState),
+                transportService,
+                TestProjectResolvers.singleProject(projectId),
+                coordinatorRewriteContextProvider(),
+                newRandomParentTask(),
+                randomFieldCapRequest(withFilter),
+                OriginalIndices.NONE,
+                randomNonNegativeLong(),
+                targetIndices.toArray(new String[0]),
+                transportService.threadPool.executor(ThreadPool.Names.SEARCH_COORDINATION),
+                responseCollector::addIndexResponse,
+                responseCollector::addIndexFailure,
+                responseCollector::onComplete
+            );
+            final RequestTracker requestTracker = new RequestTracker(dispatcher, clusterState.routingTable(), withFilter);
+            transportService.requestTracker.set(requestTracker);
+
+            RuntimeException ex = new RuntimeException("shared");
+            transportService.setTransportInterceptor(new TransportInterceptor.AsyncSender() {
+                @Override
+                public <T extends TransportResponse> void sendRequest(
+                    Transport.Connection connection,
+                    String action,
+                    TransportRequest request,
+                    TransportRequestOptions options,
+                    TransportResponseHandler<T> handler
+                ) {
+                    Exception failure = randomFrom(ex, new RuntimeException("second"), new IllegalStateException("third"));
+                    handler.executor().execute(() -> handler.handleException(new TransportException(failure)));
+                }
+            });
+            dispatcher.execute();
+            responseCollector.awaitCompletion();
+            assertThat(responseCollector.failures.keySet(), equalTo(Sets.newHashSet(targetIndices)));
+        }
+    }
+
     private static class NodeRequest {
         final int round;
         final DiscoveryNode node;
@@ -654,13 +723,13 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             }
             for (int i = 0; i < lastRound; i++) {
                 int round = i;
-                List<NodeRequest> nodeRequests = sentNodeRequests.stream().filter(r -> r.round == round).collect(Collectors.toList());
+                List<NodeRequest> nodeRequests = sentNodeRequests.stream().filter(r -> r.round == round).toList();
                 if (withFilter == false) {
                     // Without filter, each index is requested once in each round.
-                    ObjectIntMap<String> requestsPerIndex = new ObjectIntHashMap<>();
-                    nodeRequests.forEach(r -> r.indices().forEach(index -> requestsPerIndex.addTo(index, 1)));
-                    for (ObjectIntCursor<String> e : requestsPerIndex) {
-                        assertThat("index " + e.key + " has requested more than once", e.value, equalTo(1));
+                    Map<String, Integer> requestsPerIndex = new HashMap<>();
+                    nodeRequests.forEach(r -> r.indices().forEach(index -> requestsPerIndex.merge(index, 1, Integer::sum)));
+                    for (var e : requestsPerIndex.entrySet()) {
+                        assertThat("index " + e.getKey() + " has requested more than once", e.getValue(), equalTo(1));
                     }
                 }
                 // With or without filter, each new node receives at most one request each round
@@ -711,11 +780,11 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
         }
 
         List<NodeRequest> nodeRequests(String index, int round) {
-            return sentNodeRequests.stream().filter(r -> r.round == round && r.indices().contains(index)).collect(Collectors.toList());
+            return sentNodeRequests.stream().filter(r -> r.round == round && r.indices().contains(index)).toList();
         }
 
         List<NodeRequest> nodeRequests(String index) {
-            return sentNodeRequests.stream().filter(r -> r.indices().contains(index)).collect(Collectors.toList());
+            return sentNodeRequests.stream().filter(r -> r.indices().contains(index)).toList();
         }
     }
 
@@ -746,7 +815,7 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             final TestThreadPool threadPool = new TestThreadPool("test");
             TcpTransport transport = new Netty4Transport(
                 Settings.EMPTY,
-                Version.CURRENT,
+                TransportVersion.current(),
                 threadPool,
                 new NetworkService(Collections.emptyList()),
                 PageCacheRecycler.NON_RECYCLING_INSTANCE,
@@ -839,9 +908,25 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
         for (ShardId shardId : failedShards) {
             failures.put(shardId, new IllegalStateException(randomAlphaOfLength(10)));
         }
-        final List<FieldCapabilitiesIndexResponse> indexResponses = successIndices.stream()
-            .map(index -> randomIndexResponse(index, true))
-            .collect(Collectors.toList());
+        final List<FieldCapabilitiesIndexResponse> indexResponses = new ArrayList<>();
+        Map<String, List<String>> indicesWithMappingHash = new HashMap<>();
+        for (String index : successIndices) {
+            if (randomBoolean()) {
+                indicesWithMappingHash.computeIfAbsent(index, k -> new ArrayList<>()).add(index);
+            } else {
+                indexResponses.add(
+                    new FieldCapabilitiesIndexResponse(
+                        index,
+                        null,
+                        FieldCapabilitiesIndexResponseTests.randomFieldCaps(),
+                        true,
+                        randomFrom(IndexMode.availableModes())
+                    )
+                );
+            }
+        }
+        indexResponses.addAll(FieldCapabilitiesIndexResponseTests.randomIndexResponsesWithMappingHash(indicesWithMappingHash));
+        Randomness.shuffle(indexResponses);
         return new FieldCapabilitiesNodeResponse(indexResponses, failures, unmatchedShards);
     }
 
@@ -888,20 +973,24 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     }
 
     private ClusterState newClusterState(Metadata metadata, DiscoveryNodes discoveryNodes) {
-        final RoutingTable.Builder routingTable = RoutingTable.builder();
-        for (IndexMetadata imd : metadata) {
-            routingTable.addAsNew(metadata.index(imd.getIndex()));
+        GlobalRoutingTable.Builder routingTables = GlobalRoutingTable.builder();
+        for (var p : metadata.projects().entrySet()) {
+            RoutingTable.Builder routingTable = RoutingTable.builder(TestShardRoutingRoleStrategies.DEFAULT_ROLE_ONLY);
+            for (IndexMetadata imd : p.getValue()) {
+                routingTable.addAsNew(p.getValue().index(imd.getIndex()));
+            }
+            routingTables.put(p.getKey(), routingTable.build());
         }
         final ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT)
             .nodes(discoveryNodes)
             .metadata(metadata)
-            .routingTable(routingTable.build())
+            .routingTable(routingTables.build())
             .build();
         final Settings settings = Settings.EMPTY;
-        final ClusterSettings clusterSettings = new ClusterSettings(settings, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS);
+        final ClusterSettings clusterSettings = createBuiltInClusterSettings(settings);
         final ArrayList<AllocationDecider> deciders = new ArrayList<>();
-        deciders.add(new EnableAllocationDecider(settings, clusterSettings));
-        deciders.add(new SameShardAllocationDecider(settings, clusterSettings));
+        deciders.add(new EnableAllocationDecider(clusterSettings));
+        deciders.add(new SameShardAllocationDecider(clusterSettings));
         deciders.add(new ReplicaAfterPrimaryActiveAllocationDecider());
         Collections.shuffle(deciders, random());
         final MockAllocationService allocationService = new MockAllocationService(
@@ -909,7 +998,8 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             new TestGatewayAllocator(),
             new BalancedShardsAllocator(settings),
             EmptyClusterInfoService.INSTANCE,
-            SNAPSHOT_INFO_SERVICE_WITH_NO_SHARD_SIZES
+            SNAPSHOT_INFO_SERVICE_WITH_NO_SHARD_SIZES,
+            TestShardRoutingRoleStrategies.DEFAULT_ROLE_ONLY
         );
         return applyStartedShardsUntilNoChange(clusterState, allocationService);
     }
@@ -920,23 +1010,23 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     static int maxPossibleRounds(ClusterState clusterState, String index, boolean withFilter) {
         final IndexRoutingTable routingTable = clusterState.routingTable().index(index);
         if (withFilter) {
-            ObjectIntMap<ShardId> numCopiesPerShard = new ObjectIntHashMap<>();
+            Map<ShardId, Integer> numCopiesPerShard = new HashMap<>();
             for (ShardRouting shard : routingTable.randomAllActiveShardsIt()) {
-                numCopiesPerShard.addTo(shard.shardId(), 1);
+                numCopiesPerShard.merge(shard.shardId(), 1, Integer::sum);
             }
             int maxRound = 0;
-            for (ObjectIntCursor<ShardId> numCopies : numCopiesPerShard) {
-                maxRound = Math.max(maxRound, numCopies.value);
+            for (var numCopies : numCopiesPerShard.values()) {
+                maxRound = Math.max(maxRound, numCopies);
             }
             return maxRound;
         } else {
-            ObjectIntMap<String> requestsPerNode = new ObjectIntHashMap<>();
+            Map<String, Integer> requestsPerNode = new HashMap<>();
             for (ShardRouting shard : routingTable.randomAllActiveShardsIt()) {
                 requestsPerNode.put(shard.currentNodeId(), 1);
             }
             int totalRequests = 0;
-            for (IntCursor cursor : requestsPerNode.values()) {
-                totalRequests += cursor.value;
+            for (var nodeRequests : requestsPerNode.values()) {
+                totalRequests += nodeRequests;
             }
             return totalRequests;
         }
@@ -949,5 +1039,9 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
         final OperationRouting operationRouting = new OperationRouting(Settings.EMPTY, clusterSettings);
         when(clusterService.operationRouting()).thenReturn(operationRouting);
         return clusterService;
+    }
+
+    static CoordinatorRewriteContextProvider coordinatorRewriteContextProvider() {
+        return mock(CoordinatorRewriteContextProvider.class);
     }
 }
