@@ -9,32 +9,26 @@ package org.elasticsearch.xpack.ml.action;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.ElasticsearchException;
-import org.elasticsearch.ElasticsearchStatusException;
-import org.elasticsearch.ElasticsearchTimeoutException;
 import org.elasticsearch.ResourceNotFoundException;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.master.AcknowledgedResponse;
-import org.elasticsearch.action.support.master.AcknowledgedTransportMasterNodeAction;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.client.internal.OriginSettingClient;
-import org.elasticsearch.cluster.AckedClusterStateUpdateTask;
-import org.elasticsearch.cluster.ClusterState;
-import org.elasticsearch.cluster.ClusterStateTaskExecutor;
-import org.elasticsearch.cluster.block.ClusterBlockException;
-import org.elasticsearch.cluster.block.ClusterBlockLevel;
-import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
-import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
+import org.elasticsearch.cluster.project.ProjectResolver;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.inject.Inject;
+import org.elasticsearch.core.Predicates;
+import org.elasticsearch.injection.guice.Inject;
 import org.elasticsearch.persistent.PersistentTasksClusterService;
 import org.elasticsearch.persistent.PersistentTasksCustomMetadata;
 import org.elasticsearch.persistent.PersistentTasksCustomMetadata.PersistentTask;
 import org.elasticsearch.persistent.PersistentTasksService;
-import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
+import org.elasticsearch.xpack.core.action.AbstractTransportSetUpgradeModeAction;
+import org.elasticsearch.xpack.core.action.SetUpgradeModeActionRequest;
 import org.elasticsearch.xpack.core.ml.MlMetadata;
 import org.elasticsearch.xpack.core.ml.MlTasks;
 import org.elasticsearch.xpack.core.ml.action.IsolateDatafeedAction;
@@ -45,7 +39,7 @@ import org.elasticsearch.xpack.ml.utils.TypedChainTaskExecutor;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
-import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
 import static org.elasticsearch.ExceptionsHelper.rethrowAndSuppress;
@@ -55,15 +49,13 @@ import static org.elasticsearch.xpack.core.ml.MlTasks.DATAFEED_TASK_NAME;
 import static org.elasticsearch.xpack.core.ml.MlTasks.DATA_FRAME_ANALYTICS_TASK_NAME;
 import static org.elasticsearch.xpack.core.ml.MlTasks.JOB_TASK_NAME;
 
-public class TransportSetUpgradeModeAction extends AcknowledgedTransportMasterNodeAction<SetUpgradeModeAction.Request> {
+public class TransportSetUpgradeModeAction extends AbstractTransportSetUpgradeModeAction {
 
     private static final Set<String> ML_TASK_NAMES = Set.of(JOB_TASK_NAME, DATAFEED_TASK_NAME, DATA_FRAME_ANALYTICS_TASK_NAME);
 
     private static final Logger logger = LogManager.getLogger(TransportSetUpgradeModeAction.class);
-    private final AtomicBoolean isRunning = new AtomicBoolean(false);
     private final PersistentTasksClusterService persistentTasksClusterService;
     private final PersistentTasksService persistentTasksService;
-    private final ClusterService clusterService;
     private final OriginSettingClient client;
 
     @Inject
@@ -73,75 +65,40 @@ public class TransportSetUpgradeModeAction extends AcknowledgedTransportMasterNo
         ClusterService clusterService,
         PersistentTasksClusterService persistentTasksClusterService,
         ActionFilters actionFilters,
-        IndexNameExpressionResolver indexNameExpressionResolver,
         Client client,
-        PersistentTasksService persistentTasksService
+        PersistentTasksService persistentTasksService,
+        ProjectResolver projectResolver
     ) {
-        super(
-            SetUpgradeModeAction.NAME,
-            transportService,
-            clusterService,
-            threadPool,
-            actionFilters,
-            SetUpgradeModeAction.Request::new,
-            indexNameExpressionResolver,
-            ThreadPool.Names.SAME
-        );
+        super(SetUpgradeModeAction.NAME, "ml", transportService, clusterService, threadPool, actionFilters, projectResolver);
         this.persistentTasksClusterService = persistentTasksClusterService;
-        this.clusterService = clusterService;
         this.client = new OriginSettingClient(client, ML_ORIGIN);
         this.persistentTasksService = persistentTasksService;
     }
 
     @Override
-    protected void masterOperation(
+    protected String featureName() {
+        return "ml-set-upgrade-mode";
+    }
+
+    @Override
+    protected boolean isUpgradeMode(ProjectMetadata project) {
+        return MlMetadata.getMlMetadata(project).isUpgradeMode();
+    }
+
+    @Override
+    protected Consumer<ProjectMetadata.Builder> createProjectUpdate(SetUpgradeModeActionRequest request, ProjectMetadata project) {
+        logger.trace("Executing cluster state update");
+        MlMetadata updatedMetadata = new MlMetadata.Builder(project.custom(MlMetadata.TYPE)).isUpgradeMode(request.enabled()).build();
+        return b -> b.putCustom(MlMetadata.TYPE, updatedMetadata);
+    }
+
+    protected void upgradeModeSuccessfullyChanged(
         Task task,
-        SetUpgradeModeAction.Request request,
-        ClusterState state,
-        ActionListener<AcknowledgedResponse> listener
-    ) throws Exception {
-
-        // Don't want folks spamming this endpoint while it is in progress, only allow one request to be handled at a time
-        if (isRunning.compareAndSet(false, true) == false) {
-            String msg = "Attempted to set [upgrade_mode] to ["
-                + request.isEnabled()
-                + "] from ["
-                + MlMetadata.getMlMetadata(state).isUpgradeMode()
-                + "] while previous request was processing.";
-            logger.info(msg);
-            Exception detail = new IllegalStateException(msg);
-            listener.onFailure(
-                new ElasticsearchStatusException(
-                    "Cannot change [upgrade_mode]. Previous request is still being processed.",
-                    RestStatus.TOO_MANY_REQUESTS,
-                    detail
-                )
-            );
-            return;
-        }
-
-        // Noop, nothing for us to do, simply return fast to the caller
-        if (request.isEnabled() == MlMetadata.getMlMetadata(state).isUpgradeMode()) {
-            logger.info("Upgrade mode noop");
-            isRunning.set(false);
-            listener.onResponse(AcknowledgedResponse.TRUE);
-            return;
-        }
-
-        logger.info(
-            "Starting to set [upgrade_mode] to [" + request.isEnabled() + "] from [" + MlMetadata.getMlMetadata(state).isUpgradeMode() + "]"
-        );
-
-        ActionListener<AcknowledgedResponse> wrappedListener = ActionListener.wrap(r -> {
-            logger.info("Completed upgrade mode request");
-            isRunning.set(false);
-            listener.onResponse(r);
-        }, e -> {
-            logger.info("Completed upgrade mode request but with failure", e);
-            isRunning.set(false);
-            listener.onFailure(e);
-        });
-        final PersistentTasksCustomMetadata tasksCustomMetadata = state.metadata().custom(PersistentTasksCustomMetadata.TYPE);
+        SetUpgradeModeActionRequest request,
+        ProjectMetadata project,
+        ActionListener<AcknowledgedResponse> wrappedListener
+    ) {
+        final PersistentTasksCustomMetadata tasksCustomMetadata = project.custom(PersistentTasksCustomMetadata.TYPE);
 
         // <4> We have unassigned the tasks, respond to the listener.
         ActionListener<List<PersistentTask<?>>> unassignPersistentTasksListener = ActionListener.wrap(unassignedPersistentTasks -> {
@@ -153,7 +110,7 @@ public class TransportSetUpgradeModeAction extends AcknowledgedTransportMasterNo
                 // There is a chance that we failed un-allocating a task due to allocation_id being changed
                 // This call will timeout in that case and return an error
                 .setWaitForCompletion(true)
-                .setTimeout(request.timeout())
+                .setTimeout(request.ackTimeout())
                 .execute(ActionListener.wrap(r -> {
                     try {
                         // Handle potential node timeouts,
@@ -174,7 +131,7 @@ public class TransportSetUpgradeModeAction extends AcknowledgedTransportMasterNo
         // <3> After isolating the datafeeds, unassign the tasks
         ActionListener<List<IsolateDatafeedAction.Response>> isolateDatafeedListener = ActionListener.wrap(isolatedDatafeeds -> {
             logger.info("Isolated the datafeeds");
-            unassignPersistentTasks(tasksCustomMetadata, unassignPersistentTasksListener);
+            unassignPersistentTasks(project, tasksCustomMetadata, unassignPersistentTasksListener);
         }, wrappedListener::onFailure);
 
         /*
@@ -200,66 +157,30 @@ public class TransportSetUpgradeModeAction extends AcknowledgedTransportMasterNo
           </.2>
           </2>
          */
-        ActionListener<AcknowledgedResponse> clusterStateUpdateListener = ActionListener.wrap(acknowledgedResponse -> {
-            // State change was not acknowledged, we either timed out or ran into some exception
-            // We should not continue and alert failure to the end user
-            if (acknowledgedResponse.isAcknowledged() == false) {
-                logger.info("Cluster state update is NOT acknowledged");
-                wrappedListener.onFailure(new ElasticsearchTimeoutException("Unknown error occurred while updating cluster state"));
-                return;
-            }
+        if (tasksCustomMetadata == null || tasksCustomMetadata.tasks().isEmpty()) {
+            logger.info("No tasks to worry about after state update");
+            wrappedListener.onResponse(AcknowledgedResponse.TRUE);
+            return;
+        }
 
-            // There are no tasks to worry about starting/stopping
-            if (tasksCustomMetadata == null || tasksCustomMetadata.tasks().isEmpty()) {
-                logger.info("No tasks to worry about after state update");
+        if (request.enabled()) {
+            logger.info("Enabling upgrade mode, must isolate datafeeds");
+            isolateDatafeeds(tasksCustomMetadata, isolateDatafeedListener);
+        } else {
+            // Wait for jobs, datafeeds and analytics not to be "Awaiting upgrade"
+            logger.info("Disabling upgrade mode, must wait for tasks to not have AWAITING_UPGRADE assignment");
+            persistentTasksService.waitForPersistentTasksCondition(project.id(), persistentTasksCustomMetadata -> {
+                if (persistentTasksCustomMetadata == null) {
+                    return true;
+                }
+                return persistentTasksCustomMetadata.tasks()
+                    .stream()
+                    .noneMatch(t -> ML_TASK_NAMES.contains(t.getTaskName()) && t.getAssignment().equals(AWAITING_UPGRADE));
+            }, request.ackTimeout(), ActionListener.wrap(r -> {
+                logger.info("Done waiting for tasks to be out of AWAITING_UPGRADE");
                 wrappedListener.onResponse(AcknowledgedResponse.TRUE);
-                return;
-            }
-
-            // Did we change from disabled -> enabled?
-            if (request.isEnabled()) {
-                logger.info("Enabling upgrade mode, must isolate datafeeds");
-                isolateDatafeeds(tasksCustomMetadata, isolateDatafeedListener);
-            } else {
-                logger.info("Disabling upgrade mode, must wait for tasks to not have AWAITING_UPGRADE assignment");
-                persistentTasksService.waitForPersistentTasksCondition(
-                    // Wait for jobs, datafeeds and analytics not to be "Awaiting upgrade"
-                    persistentTasksCustomMetadata -> persistentTasksCustomMetadata.tasks()
-                        .stream()
-                        .noneMatch(t -> ML_TASK_NAMES.contains(t.getTaskName()) && t.getAssignment().equals(AWAITING_UPGRADE)),
-                    request.timeout(),
-                    ActionListener.wrap(r -> {
-                        logger.info("Done waiting for tasks to be out of AWAITING_UPGRADE");
-                        wrappedListener.onResponse(AcknowledgedResponse.TRUE);
-                    }, wrappedListener::onFailure)
-                );
-            }
-        }, wrappedListener::onFailure);
-
-        // <1> Change MlMetadata to indicate that upgrade_mode is now enabled
-        clusterService.submitStateUpdateTask("ml-set-upgrade-mode", new AckedClusterStateUpdateTask(request, clusterStateUpdateListener) {
-
-            @Override
-            protected AcknowledgedResponse newResponse(boolean acknowledged) {
-                logger.trace("Cluster update response built: " + acknowledged);
-                return AcknowledgedResponse.of(acknowledged);
-            }
-
-            @Override
-            public ClusterState execute(ClusterState currentState) throws Exception {
-                logger.trace("Executing cluster state update");
-                MlMetadata.Builder builder = new MlMetadata.Builder(currentState.metadata().custom(MlMetadata.TYPE));
-                builder.isUpgradeMode(request.isEnabled());
-                ClusterState.Builder newState = ClusterState.builder(currentState);
-                newState.metadata(Metadata.builder(currentState.getMetadata()).putCustom(MlMetadata.TYPE, builder.build()).build());
-                return newState.build();
-            }
-        }, ClusterStateTaskExecutor.unbatched());
-    }
-
-    @Override
-    protected ClusterBlockException checkBlock(SetUpgradeModeAction.Request request, ClusterState state) {
-        return state.blocks().globalBlockedException(ClusterBlockLevel.METADATA_WRITE);
+            }, wrappedListener::onFailure));
+        }
     }
 
     /**
@@ -276,6 +197,7 @@ public class TransportSetUpgradeModeAction extends AcknowledgedTransportMasterNo
      * @param listener            Alerted when tasks are unassignd
      */
     private void unassignPersistentTasks(
+        ProjectMetadata project,
         PersistentTasksCustomMetadata tasksCustomMetadata,
         ActionListener<List<PersistentTask<?>>> listener
     ) {
@@ -285,15 +207,15 @@ public class TransportSetUpgradeModeAction extends AcknowledgedTransportMasterNo
             // We want to always have the same ordering of which tasks we un-allocate first.
             // However, the order in which the distributed tasks handle the un-allocation event is not guaranteed.
             .sorted(Comparator.comparing(PersistentTask::getTaskName))
-            .collect(Collectors.toList());
+            .toList();
 
         logger.info(
             "Un-assigning persistent tasks : " + mlTasks.stream().map(PersistentTask::getId).collect(Collectors.joining(", ", "[ ", " ]"))
         );
 
         TypedChainTaskExecutor<PersistentTask<?>> chainTaskExecutor = new TypedChainTaskExecutor<>(
-            client.threadPool().executor(executor),
-            r -> true,
+            executor,
+            Predicates.always(),
             // Another process could modify tasks and thus we cannot find them via the allocation_id and name
             // If the task was removed from the node, all is well
             // We handle the case of allocation_id changing later in this transport class by timing out waiting for task completion
@@ -304,6 +226,7 @@ public class TransportSetUpgradeModeAction extends AcknowledgedTransportMasterNo
         for (PersistentTask<?> task : mlTasks) {
             chainTaskExecutor.add(
                 chainedTask -> persistentTasksClusterService.unassignPersistentTask(
+                    project.id(),
                     task.getId(),
                     task.getAllocationId(),
                     AWAITING_UPGRADE.getExplanation(),
@@ -322,9 +245,9 @@ public class TransportSetUpgradeModeAction extends AcknowledgedTransportMasterNo
 
         logger.info("Isolating datafeeds: " + datafeedsToIsolate.toString());
         TypedChainTaskExecutor<IsolateDatafeedAction.Response> isolateDatafeedsExecutor = new TypedChainTaskExecutor<>(
-            client.threadPool().executor(executor),
-            r -> true,
-            ex -> true
+            executor,
+            Predicates.always(),
+            Predicates.always()
         );
 
         datafeedsToIsolate.forEach(datafeedId -> {
