@@ -14,9 +14,9 @@ import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.cli.ExitCodes;
-import org.elasticsearch.cli.SuppressForbidden;
-import org.elasticsearch.cli.Terminal;
+import org.elasticsearch.cli.ProcessInfo;
 import org.elasticsearch.cli.UserException;
+import org.elasticsearch.cli.terminal.Terminal;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.cli.KeyStoreAwareCommand;
 import org.elasticsearch.common.logging.Loggers;
@@ -27,10 +27,12 @@ import org.elasticsearch.common.util.LocaleUtils;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.core.CheckedFunction;
 import org.elasticsearch.core.PathUtils;
+import org.elasticsearch.core.SuppressForbidden;
 import org.elasticsearch.env.Environment;
 import org.elasticsearch.xpack.core.security.authc.RealmConfig;
 import org.elasticsearch.xpack.core.security.authc.RealmSettings;
 import org.elasticsearch.xpack.core.security.authc.saml.SamlRealmSettings;
+import org.elasticsearch.xpack.core.security.authc.saml.SingleSpSamlRealmSettings;
 import org.elasticsearch.xpack.core.ssl.CertParsingUtils;
 import org.elasticsearch.xpack.security.authc.saml.SamlSpMetadataBuilder.ContactInfo;
 import org.opensaml.core.xml.config.XMLObjectProviderRegistrySupport;
@@ -69,7 +71,7 @@ import java.util.stream.Collectors;
 /**
  * CLI tool to generate SAML Metadata for a Service Provider (realm)
  */
-public class SamlMetadataCommand extends KeyStoreAwareCommand {
+class SamlMetadataCommand extends KeyStoreAwareCommand {
 
     static final String METADATA_SCHEMA = "saml-schema-metadata-2.0.xsd";
 
@@ -90,18 +92,14 @@ public class SamlMetadataCommand extends KeyStoreAwareCommand {
     private final CheckedFunction<Environment, KeyStoreWrapper, Exception> keyStoreFunction;
     private KeyStoreWrapper keyStoreWrapper;
 
-    public static void main(String[] args) throws Exception {
-        exit(new SamlMetadataCommand().main(args, Terminal.DEFAULT));
-    }
-
-    public SamlMetadataCommand() {
+    SamlMetadataCommand() {
         this((environment) -> {
-            KeyStoreWrapper ksWrapper = KeyStoreWrapper.load(environment.configFile());
+            KeyStoreWrapper ksWrapper = KeyStoreWrapper.load(environment.configDir());
             return ksWrapper;
         });
     }
 
-    public SamlMetadataCommand(CheckedFunction<Environment, KeyStoreWrapper, Exception> keyStoreFunction) {
+    SamlMetadataCommand(CheckedFunction<Environment, KeyStoreWrapper, Exception> keyStoreFunction) {
         super("Generate Service Provider Metadata for a SAML realm");
         outputPathSpec = parser.accepts("out", "path of the xml file that should be generated").withRequiredArg();
         batchSpec = parser.accepts("batch", "Do not prompt");
@@ -142,7 +140,7 @@ public class SamlMetadataCommand extends KeyStoreAwareCommand {
     }
 
     @Override
-    protected void execute(Terminal terminal, OptionSet options, Environment env) throws Exception {
+    public void execute(Terminal terminal, OptionSet options, Environment env, ProcessInfo processInfo) throws Exception {
         // OpenSAML prints a lot of _stuff_ at info level, that really isn't needed in a command line tool.
         Loggers.setLevel(LogManager.getLogger("org.opensaml"), Level.WARN);
 
@@ -169,7 +167,7 @@ public class SamlMetadataCommand extends KeyStoreAwareCommand {
         final Locale locale = findLocale(options);
         terminal.println(Terminal.Verbosity.VERBOSE, "Using locale: " + locale.toLanguageTag());
 
-        final SpConfiguration spConfig = SamlRealm.getSpConfiguration(realm);
+        final SpConfiguration spConfig = SingleSamlSpConfiguration.create(realm);
         final SamlSpMetadataBuilder builder = new SamlSpMetadataBuilder(locale, spConfig.getEntityId()).assertionConsumerServiceUrl(
             spConfig.getAscUrl()
         )
@@ -367,7 +365,7 @@ public class SamlMetadataCommand extends KeyStoreAwareCommand {
         }
     }
 
-    private void validateXml(Terminal terminal, Path xml) throws Exception {
+    private static void validateXml(Terminal terminal, Path xml) throws Exception {
         try (InputStream xmlInput = Files.newInputStream(xml)) {
             SamlUtils.validate(xmlInput, METADATA_SCHEMA);
             terminal.println(Terminal.Verbosity.VERBOSE, "The generated metadata file conforms to the SAML metadata schema");
@@ -382,7 +380,7 @@ public class SamlMetadataCommand extends KeyStoreAwareCommand {
         }
     }
 
-    private void printExceptions(Terminal terminal, Throwable throwable) {
+    private static void printExceptions(Terminal terminal, Throwable throwable) {
         terminal.errorPrintln(" - " + throwable.getMessage());
         for (Throwable sup : throwable.getSuppressed()) {
             printExceptions(terminal, sup);
@@ -393,11 +391,11 @@ public class SamlMetadataCommand extends KeyStoreAwareCommand {
     }
 
     @SuppressForbidden(reason = "CLI tool working from current directory")
-    private Path resolvePath(String name) {
+    private static Path resolvePath(String name) {
         return PathUtils.get(name).normalize();
     }
 
-    private String requireText(Terminal terminal, String prompt) {
+    private static String requireText(Terminal terminal, String prompt) {
         String value = null;
         while (Strings.isNullOrEmpty(value)) {
             value = terminal.readText(prompt);
@@ -405,7 +403,7 @@ public class SamlMetadataCommand extends KeyStoreAwareCommand {
         return value;
     }
 
-    private <T> T option(OptionSpec<T> spec, OptionSet options, T defaultValue) {
+    private static <T> T option(OptionSpec<T> spec, OptionSet options, T defaultValue) {
         if (options.has(spec)) {
             return spec.value(options);
         } else {
@@ -431,7 +429,7 @@ public class SamlMetadataCommand extends KeyStoreAwareCommand {
     }
 
     // We sort this Set so that it is deterministic for testing
-    private SortedSet<String> sorted(Set<String> strings) {
+    private static SortedSet<String> sorted(Set<String> strings) {
         return new TreeSet<>(strings);
     }
 
@@ -458,10 +456,10 @@ public class SamlMetadataCommand extends KeyStoreAwareCommand {
         final Map<RealmConfig.RealmIdentifier, Settings> realms = RealmSettings.getRealmSettings(settings);
         if (options.has(realmSpec)) {
             final String name = realmSpec.value(options);
-            final RealmConfig.RealmIdentifier identifier = new RealmConfig.RealmIdentifier(SamlRealmSettings.TYPE, name);
+            final RealmConfig.RealmIdentifier identifier = new RealmConfig.RealmIdentifier(SingleSpSamlRealmSettings.TYPE, name);
             final Settings realmSettings = realms.get(identifier);
             if (realmSettings == null) {
-                throw new UserException(ExitCodes.CONFIG, "No such realm '" + name + "' defined in " + env.configFile());
+                throw new UserException(ExitCodes.CONFIG, "No such realm '" + name + "' defined in " + env.configDir());
             }
             if (isSamlRealm(identifier)) {
                 return buildRealm(identifier, env, settings);
@@ -472,12 +470,12 @@ public class SamlMetadataCommand extends KeyStoreAwareCommand {
             final List<Map.Entry<RealmConfig.RealmIdentifier, Settings>> saml = realms.entrySet()
                 .stream()
                 .filter(entry -> isSamlRealm(entry.getKey()))
-                .collect(Collectors.toList());
+                .toList();
             if (saml.isEmpty()) {
-                throw new UserException(ExitCodes.CONFIG, "There is no SAML realm configured in " + env.configFile());
+                throw new UserException(ExitCodes.CONFIG, "There is no SAML realm configured in " + env.configDir());
             }
             if (saml.size() > 1) {
-                terminal.errorPrintln("Using configuration in " + env.configFile());
+                terminal.errorPrintln("Using configuration in " + env.configDir());
                 terminal.errorPrintln(
                     "Found multiple SAML realms: "
                         + saml.stream().map(Map.Entry::getKey).map(Object::toString).collect(Collectors.joining(", "))
@@ -494,16 +492,16 @@ public class SamlMetadataCommand extends KeyStoreAwareCommand {
         }
     }
 
-    private String optionName(OptionSpec<?> spec) {
+    private static String optionName(OptionSpec<?> spec) {
         return spec.options().get(0);
     }
 
-    private RealmConfig buildRealm(RealmConfig.RealmIdentifier identifier, Environment env, Settings globalSettings) {
+    private static RealmConfig buildRealm(RealmConfig.RealmIdentifier identifier, Environment env, Settings globalSettings) {
         return new RealmConfig(identifier, globalSettings, env, new ThreadContext(globalSettings));
     }
 
-    private boolean isSamlRealm(RealmConfig.RealmIdentifier realmIdentifier) {
-        return SamlRealmSettings.TYPE.equals(realmIdentifier.getType());
+    private static boolean isSamlRealm(RealmConfig.RealmIdentifier realmIdentifier) {
+        return SingleSpSamlRealmSettings.TYPE.equals(realmIdentifier.getType());
     }
 
     private Locale findLocale(OptionSet options) {
